<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_list_top"
        android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_clubs"
            android:title="@string/clubs" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_club_settings"
            android:title="@string/club_settings"
            android:visible="false"/>
    </group>

    <group
        android:id="@+id/nav_list_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>

</menu>
