<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvClubDetails"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/club_logo"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/tvClubDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/club_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:layout_constraintBottom_toTopOf="@+id/tvFees"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/tvFees"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/membership_cost"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvClubDetails"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/email_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFees"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btJoin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/join"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btEvents"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btEvents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/go_to_club_events"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
