<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etClubName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/club_name"
            android:inputType="textPersonName"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/etClubDetails"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/etClubDetails"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/club_details"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etClubName"
            app:layout_constraintBottom_toTopOf="@+id/etFees"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/etFees"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/membership_fees"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/ivLogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etClubDetails" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/club_logo"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btChooseLogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFees"
            app:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/btChooseLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:onClick="ChooseImage"
            android:text="@string/choose_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:layout_constraintBottom_toTopOf="@+id/btCreateClub"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btCreateClub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="CreateClub"
            android:text="@string/create_club"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btChooseLogo"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
